<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.MainFragment">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/dimens_16dp"
        android:background="@drawable/rounded_grey"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/dimens_10dp"
        android:imeOptions="actionDone"
        app:layout_constraintRight_toLeftOf="@+id/iv_favorite"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/search_movie"
        android:inputType="textCapWords"
        android:paddingHorizontal="@dimen/dimens_20dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <ImageView
        android:layout_width="@dimen/dimens_40dp"
        android:layout_height="@dimen/dimens_40dp"
        android:padding="3dp"
        android:src="@drawable/ic_star"
        android:layout_marginEnd="@dimen/dimens_16dp"
        android:id="@+id/iv_favorite"
        app:layout_constraintTop_toTopOf="@id/et_search"
        app:layout_constraintBottom_toBottomOf="@+id/et_search"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/iv_favorite" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/pg_movie"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0dp"
        android:layout_marginTop="@dimen/dimens_10dp"
        android:scrollbars="none"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:text="@string/now_playing"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:id="@+id/rv_nowPlaying"
                android:paddingHorizontal="@dimen/dimens_8dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>