<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Capstone1"
    tools:context=".presentation.fragment.DetailMovieFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:minHeight="500dp"
                android:transitionName="imgDetail"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/img_detail" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/gradient_black_trans"
                app:layout_constraintBottom_toBottomOf="@id/iv_detail_movie" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="@dimen/dimens_0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:background="@android:color/transparent"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_detail_movie"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_favorite"
                tools:text="Jeepers Creepers: Reborn" />

            <ImageView
                android:id="@+id/btn_favorite"
                android:layout_width="@dimen/dimens_40dp"
                android:layout_height="@dimen/dimens_40dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_star_unselected"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title"
                android:contentDescription="@string/btn_favorite" />

            <TextView
                android:id="@+id/tv_overview_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginTop="25dp"
                android:text="@string/overview"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_lbl"
                tools:text="Forced to travel with her boyfriend to a horror festival, Laine begins to experience disturbing visions associated with the urban legend of The Creeper. As the festival arrives and the blood-soaked entertainment builds to a frenzy, she becomes the center of it while something unearthly has been summoned." />

            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="@dimen/dimens_30dp"
                android:layout_height="@dimen/dimens_30dp"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:src="@drawable/ic_star"
                app:layout_constraintLeft_toLeftOf="@id/tv_rate"
                app:layout_constraintRight_toRightOf="@id/tv_rate"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                android:contentDescription="@string/iv_favorite" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimens_16dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:layout_marginBottom="@dimen/dimens_40dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_star"
                tools:text="7.8 / 10" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>